--- a/index.html
+++ b/index.html
@@ -13,13 +13,26 @@
   
   <div class="container-allcards">
     <div class="container-cards-sedans">
+      <img src="images\icon-sedans.svg" class="sedans-logo">
+      <h2 class="sedans-title">SEDANS</h2>
+      <p class="sedans-p">  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+        or on your next road trip.</p>
+      <button class="sedans-btn">Learn More</button>
     </div>
 
     <div class="container-cards-suvs">
-
+        <img src="images\icon-suvs.svg" class="suvs-logo">
+        <h2 class="suvs-title">SEDANS</h2>
+        <p class="suvs-p">  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+          and off-road adventures.</p>
+        <button class="suvs-btn">Learn More</button>
     </div>
     <div class="container-cards-luxury">
-
+      <img src="images\icon-luxury.svg" class="luxury-logo">
+      <h2 class="luxury-title">SEDANS</h2>
+      <p class="luxury-p">  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+        rental and arrive in style.</p>
+      <button class="luxury-btn">Learn More</button>
     </div>
   </div>
   <!-- Sedans
