--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link href="public/styles.css" rel="stylesheet">
+  <link href="./public/styles.css" rel="stylesheet">
   <title>Frontend Mentor | 3-column preview card component</title>
 </head>
 <body>
