--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 
     <div class="container-cards-suvs">
         <img src="images\icon-suvs.svg" class="suvs-logo">
-        <h2 class="suvs-title">SEDANS</h2>
+        <h2 class="suvs-title">SUVS</h2>
         <p class="suvs-p">  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
           and off-road adventures.</p>
         <button class="suvs-btn">Learn More</button>
     </div>
     <div class="container-cards-luxury">
       <img src="images\icon-luxury.svg" class="luxury-logo">
-      <h2 class="luxury-title">SEDANS</h2>
+      <h2 class="luxury-title">LUXURY</h2>
       <p class="luxury-p">  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
         rental and arrive in style.</p>
       <button class="luxury-btn">Learn More</button>
