--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="container-cards-suvs">
         <img src="images\icon-suvs.svg" class="suvs-logo">
-        <h2 class="suvs-title">SUVS</h2>
+        <h2 class="suvs-title">SUVs</h2>
         <p class="suvs-p">  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
           and off-road adventures.</p>
         <button class="suvs-btn">Learn More</button>
